--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -3,3 +3,5 @@ version = 3.8.2
 runner.dialect = scala3
 maxColumn = 120
 align.preset = more
+rewrite.scala3.removeOptionalBraces = yes
+rewrite.scala3.convertToNewSyntax = true
